P5 E-learning/force-app/main/default/objects/User/fields/PuntosTotales__c.field-meta.xml
<CustomField>
    <fullName>PuntosTotales__c</fullName>
    <label>PuntosTotales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>