P5 E-learning/force-app/main/default/objects/User/fields/Rango__c.field-meta.xml
<CustomField>
    <fullName>Rango__c</fullName>
    <formula>IF( PuntosTotales__c = 0, &quot;SCOUT&quot;,IF(PuntosTotales__c&lt;= 100,&quot;HIKER&quot;,IF(PuntosTotales__c &lt;= 200, &quot;EXPLORER&quot;,IF(PuntosTotales__c &lt;= 300, &quot;ADVENTURER&quot;, IF( PuntosTotales__c &lt;= 400, &quot;MOUNTAINEER&quot;, IF(PuntosTotales__c &lt;= 500, &quot;EXPEDITIONER&quot;,  IF(PuntosTotales__c &lt;= 600,&quot;RANGER&quot;, &quot;SUPERSTAR&quot;) )  )  ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rango</label>
    <type>Text</type>
</CustomField>