P5 E-learning/force-app/main/default/objects/User/fields/TipoUsuario__c.field-meta.xml
<CustomField>
    <fullName>TipoUsuario__c</fullName>
    <label>TipoUsuario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumnos</fullName>
                <default>true</default>
                <label>Alumnos</label>
            </value>
            <value>
                <fullName>Profesor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>